--- a/test-output/index.html
+++ b/test-output/index.html
@@ -366,57 +366,57 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(13);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'monthFilter')
+data.setCell(0, 1, 'customerFilter')
 data.setCell(0, 2, 'Valiram.SerenityDemo.Filter')
-data.setCell(0, 3, 13982);
+data.setCell(0, 3, 13388);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'customerFilter')
+data.setCell(1, 1, 'projectFilter')
 data.setCell(1, 2, 'Valiram.SerenityDemo.Filter')
-data.setCell(1, 3, 13924);
+data.setCell(1, 3, 12917);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'projectFilter')
+data.setCell(2, 1, 'monthFilter')
 data.setCell(2, 2, 'Valiram.SerenityDemo.Filter')
-data.setCell(2, 3, 13464);
+data.setCell(2, 3, 12109);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'VerifyAddDescription')
+data.setCell(3, 1, 'VerifyTagSelection')
 data.setCell(3, 2, 'Valiram.SerenityDemo.WorkLog')
-data.setCell(3, 3, 12493);
+data.setCell(3, 3, 11905);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'VerifyTagSelection')
+data.setCell(4, 1, 'VerifyAddDescription')
 data.setCell(4, 2, 'Valiram.SerenityDemo.WorkLog')
-data.setCell(4, 3, 11873);
+data.setCell(4, 3, 11135);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'VerifyProjectSelection')
 data.setCell(5, 2, 'Valiram.SerenityDemo.WorkLog')
-data.setCell(5, 3, 11083);
+data.setCell(5, 3, 10255);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'newWorkLog')
 data.setCell(6, 2, 'Valiram.SerenityDemo.WorkLog')
-data.setCell(6, 3, 10982);
+data.setCell(6, 3, 9609);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'invalidPasswordTest')
 data.setCell(7, 2, 'Valiram.SerenityDemo.Login')
-data.setCell(7, 3, 9182);
+data.setCell(7, 3, 8426);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'caseInsensitivityCheckTest')
 data.setCell(8, 2, 'Valiram.SerenityDemo.Login')
-data.setCell(8, 3, 8810);
+data.setCell(8, 3, 8302);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'invalidUsernameTest')
+data.setCell(9, 1, 'validLoginTest')
 data.setCell(9, 2, 'Valiram.SerenityDemo.Login')
-data.setCell(9, 3, 8660);
+data.setCell(9, 3, 8287);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'trimmingSpacesInCredentialsTest')
 data.setCell(10, 2, 'Valiram.SerenityDemo.Login')
-data.setCell(10, 3, 8405);
+data.setCell(10, 3, 8161);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'validLoginTest')
+data.setCell(11, 1, 'invalidUsernameTest')
 data.setCell(11, 2, 'Valiram.SerenityDemo.Login')
-data.setCell(11, 3, 8244);
+data.setCell(11, 3, 8101);
 data.setCell(12, 0, 12)
 data.setCell(12, 1, 'emptyFieldsTest')
 data.setCell(12, 2, 'Valiram.SerenityDemo.Login')
-data.setCell(12, 3, 8052);
+data.setCell(12, 3, 7163);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -454,162 +454,174 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">customerFilter</span>
-                <span class="method-start">9054 ms</span>
+                <span class="method-start">10905 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22981 ms</span>
+                <span class="method-start">24297 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">23449 ms</span>
+                <span class="method-start">24700 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">monthFilter</span>
-                <span class="method-start">30853 ms</span>
+                <span class="method-start">30832 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">44836 ms</span>
+                <span class="method-start">42942 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">45298 ms</span>
+                <span class="method-start">43423 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">projectFilter</span>
-                <span class="method-start">53131 ms</span>
+                <span class="method-start">49651 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">66596 ms</span>
+                <span class="method-start">62569 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">tearEnd</span>
+                <span class="method-start">62969 ms</span>
+              </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Valiram.SerenityDemo.Login</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">67250 ms</span>
+                <span class="method-start">63161 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">caseInsensitivityCheckTest</span>
-                <span class="method-start">75064 ms</span>
+                <span class="method-start">69728 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">83875 ms</span>
+                <span class="method-start">78032 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">84405 ms</span>
+                <span class="method-start">78382 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">emptyFieldsTest</span>
-                <span class="method-start">92658 ms</span>
+                <span class="method-start">84809 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">100711 ms</span>
+                <span class="method-start">91973 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">101180 ms</span>
+                <span class="method-start">92309 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">invalidPasswordTest</span>
-                <span class="method-start">109273 ms</span>
+                <span class="method-start">97872 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">118456 ms</span>
+                <span class="method-start">106299 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">118918 ms</span>
+                <span class="method-start">106695 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">invalidUsernameTest</span>
-                <span class="method-start">127411 ms</span>
+                <span class="method-start">113859 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">136072 ms</span>
+                <span class="method-start">121961 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">136606 ms</span>
+                <span class="method-start">122349 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">trimmingSpacesInCredentialsTest</span>
-                <span class="method-start">144888 ms</span>
+                <span class="method-start">128935 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">153294 ms</span>
+                <span class="method-start">137097 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">153873 ms</span>
+                <span class="method-start">137493 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validLoginTest</span>
-                <span class="method-start">162355 ms</span>
+                <span class="method-start">144003 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">170600 ms</span>
+                <span class="method-start">152291 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">tearEnd</span>
+                <span class="method-start">152617 ms</span>
+              </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Valiram.SerenityDemo.WorkLog</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">171065 ms</span>
+                <span class="method-start">152641 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyAddDescription</span>
-                <span class="method-start">178802 ms</span>
+                <span class="method-start">158736 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">191296 ms</span>
+                <span class="method-start">169872 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">191758 ms</span>
+                <span class="method-start">170310 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyProjectSelection</span>
-                <span class="method-start">199875 ms</span>
+                <span class="method-start">176661 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">210959 ms</span>
+                <span class="method-start">186917 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">211447 ms</span>
+                <span class="method-start">187320 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">VerifyTagSelection</span>
-                <span class="method-start">219965 ms</span>
+                <span class="method-start">193573 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">231839 ms</span>
+                <span class="method-start">205479 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">ConfigureAppium</span>
-                <span class="method-start">232358 ms</span>
+                <span class="method-start">205886 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">newWorkLog</span>
-                <span class="method-start">240679 ms</span>
+                <span class="method-start">212072 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">251662 ms</span>
+                <span class="method-start">221682 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">tearEnd</span>
+                <span class="method-start">222058 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
